
 OpenSSL CHANGES
 _______________

 This is a high-level summary of the most important changes.
 For a full list of changes, see the git commit log; for example,
 https://github.com/openssl/openssl/commits/ and pick the appropriate
 release branch.

 Changes between 1.1.1 and 3.0.0 [xx XXX xxxx]

  *) Added property based algorithm implementation selection framework to
     the core.
     [Paul Dale]

  *) Added SCA hardening for modular field inversion in EC_GROUP through
     a new dedicated field_inv() pointer in EC_METHOD.
     This also addresses a leakage affecting conversions from projective
     to affine coordinates.
     [Billy Bob Brumley, Nicola Tuveri]

  *) Added EVP_KDF, an EVP layer KDF API, to simplify adding KDF and PRF
     implementations.  This includes an EVP_PKEY to EVP_KDF bridge for
     those algorithms that were already supported through the EVP_PKEY API
     (scrypt, TLS1 PRF and HKDF).  The low-level KDF functions for PBKDF2
     and scrypt are now wrappers that call EVP_KDF.
     [David Makepeace]

  *) Build devcrypto engine as a dynamic engine.
     [Eneas U de Queiroz]

  *) Add keyed BLAKE2 to EVP_MAC.
     [Antoine Salon]

  *) Fix a bug in the computation of the endpoint-pair shared secret used
     by DTLS over SCTP. This breaks interoperability with older versions
     of OpenSSL like OpenSSL 1.1.0 and OpenSSL 1.0.2. There is a runtime
     switch SSL_MODE_DTLS_SCTP_LABEL_LENGTH_BUG (off by default) enabling
     interoperability with such broken implementations. However, enabling
     this switch breaks interoperability with correct implementations.

  *) Fix a use after free bug in d2i_X509_PUBKEY when overwriting a
     re-used X509_PUBKEY object if the second PUBKEY is malformed.
     [Bernd Edlinger]

  *) Move strictness check from EVP_PKEY_asn1_new() to EVP_PKEY_asn1_add0().
     [Richard Levitte]

  *) Change the license to the Apache License v2.0.
     [Richard Levitte]
